--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:source-api": "node api-source-server/server.js",
-    "start:generate-log": "node api-source-server/generate-log.js",
+    "start:source-api": "node api-source/server.js",
+    "start:generate-log": "node api-source/generate-log.js",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -24,6 +24,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.0",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "reflect-metadata": "^0.2.2",
