--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:source-api": "node api-source/server.js",
-    "start:generate-log": "node api-source/generate-log.js",
+    "start:data-source": "node data-source/data-source.js",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
